--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,107 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>动捕科技</title>
+  <title>动捕后台管理</title>
+  <style>
+    html,
+    body {
+      /* background-color: #efefef; */
+      background-color: #fff;
+    }
+
+    .loader {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 11em;
+      height: 11em;
+      margin: -5.5em;
+      transform: rotate(45deg);
+    }
+
+    .loader:after,
+    .loader:before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 11em;
+      height: 11em;
+      border-radius: 0.5em;
+      transform: translate(-50%, -50%);
+    }
+
+    .loader:after {
+      height: 1em;
+      animation: move-after 2s infinite;
+    }
+
+    .loader:before {
+      width: 1em;
+      animation: move-before 2s infinite;
+    }
+
+    .loader-text {
+      position: absolute;
+      top: 45%;
+      left: 50%;
+      width: 20em;
+      margin: -8em -10em;
+      font-size: 18px;
+      text-align: center;
+      color: grey;
+      text-shadow: cornflowerblue;
+    }
+
+
+    @keyframes move-after {
+
+      0% {
+        width: 1em;
+        box-shadow: 5em -3em #c9f0fc, -5em 3em #f4a7c4;
+      }
+
+      35% {
+        width: 11em;
+        box-shadow: 0 -3em #c9f0fc, 0 3em #f4a7c4;
+      }
+
+      70% {
+        width: 1em;
+        box-shadow: -5em -3em #c9f0fc, 5em 3em #f4a7c4;
+      }
+
+      100% {
+        width: 1em;
+        box-shadow: 5em -3em #c9f0fc, -5em 3em #f4a7c4;
+      }
+    }
+
+    @keyframes move-before {
+
+      0% {
+        height: 1em;
+        box-shadow: -3em -5em #b3e5d5, 3em 5em #f7dfac;
+      }
+
+      35% {
+        height: 11em;
+        box-shadow: -3em 0 #b3e5d5, 3em 0 #f7dfac;
+      }
+
+      70% {
+        height: 1em;
+        box-shadow: -3em 5em #b3e5d5, 3em -5em #f7dfac;
+      }
+
+
+      100% {
+        height: 1em;
+        box-shadow: -3em -5em #b3e5d5, 3em 5em #f7dfac;
+      }
+    }
+  </style>
   <!-- require cdn assets css -->
   <% for (var i in htmlWebpackPlugin.options.cdn && htmlWebpackPlugin.options.cdn.css) { %>
   <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.cdn.css[i] %>" />
@@ -19,7 +119,11 @@
       Please enable it to continue.</strong>
   </noscript>
   <div id="popContainer" class="beauty-scroll" style="height: 100vh; overflow-y: scroll">
-    <div id="app"></div>
+    <div id="app">
+      <!-- css3 动画 -->
+      <div class="loader"></div>
+      <div class="loader-text">页面加载中请稍后... </div>
+    </div>
   </div>
   <!-- require cdn assets js -->
   <% for (var i in htmlWebpackPlugin.options.cdn && htmlWebpackPlugin.options.cdn.js) { %>
